# ClassBridge

./: .gitignore  LICENSE  README.md  requirements.txt
Nonebot/: corefunction.py
Nonebot/kgGao29Robot/: README.md  pyproject.toml
Nonebot/kgGao29Robot/src/plugins/message_handler_plugin/: __init__.py  config.py  messages.py  server_api.py
PRDs/: PRD.md  Technical.md  TestChecklist.md  UI.md
README_source/Gemini_Conversation/: chat.md
client/: __init__.py  app.py  client.example.toml  main_window.py  models.py  ntp.py  requirements.txt  schedule_loader.py  security.py  websocket_worker.py
client/schedule/: schedule.json  test.json
configs/: client.example.toml  plugin.example.toml
docs/: PROJECT_CONTRACT.md
server/: __init__.py  app.py  database.py  server.example.toml  service.py  short_id.py
shared/: __init__.py  config.py  logging_utils.py  paths.py  protocol.py
